--- a/CommentBox/test.html
+++ b/CommentBox/test.html
@@ -2,20 +2,65 @@
 <meta charset="utf-8">
 
 <head>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 	<script src="https://d3js.org/d3.v4.min.js" charset="utf-8"></script>
 	<link rel="stylesheet" href="test.css">
 </head>
 
 <body>
 	<div class="parentDiv">
+		<div class="container">
+			<!-- Trigger the modal with a button 
+			<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open
+				Modal</button> -->
+			
+
+			<!-- Modal -->
+			<div class="modal fade" id="myModal" role="dialog">
+				<div class="modal-dialog">
+					<!-- Modal content-->
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal">&times;</button>
+							<h4 class="modal-title">Save as an issue</h4>
+						</div>
+						<div class="modal-body">
+							<form action="/action_page.php">
+								Issue Title:<br>
+								<input id ="issue_title" type="text" name="issue_title" value="Title of the issue">
+								<br>
+								Issue Type:<br>
+								<input id = "issue_type" type="text" name="issue_type" value="Type of the issue">
+								<br>
+								Issue Type:<br>
+								<input id = "issue_text" type="text" name="issue_text" value="Issue text">
+								<br>
+							</form>
+						</div>
+						<div class="modal-footer">
+							<input id="save_button" class="btn btn-primary" type="button" value="Save">
+							<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+						</div>
+					</div>
+
+				</div>
+			</div>
+
+		</div>
 
 		<!--<div id="comments" , class="comments"></div>
-		<div style="background-color:blueviolet; height:30vh; width: 100%"></div>-->
-		<div id="parentBox", class="box"></div>
+		<div style="background-color:blueviolet; height:30vh; width: 100%"></div>
+		<button onclick="myFunction()">Try it</button>-->
+		<div id="parentBox" , class="box"></div>
 	</div>
+
 </body>
 
 </html>
 
 <script src="overview.js"></script>
+<script src="proposal_view.js"></script>
+<script src="revision.js"></script>
 <script src="test.js"></script>
