--- a/CommentBox/test.html
+++ b/CommentBox/test.html
@@ -17,8 +17,8 @@
 				Modal</button> -->
 			
 
-			<!-- Modal -->
-			<div class="modal fade" id="myModal" role="dialog">
+			<!-- Modal Issue-->
+			<div class="modal fade" id="issueModal" role="dialog">
 				<div class="modal-dialog">
 					<!-- Modal content-->
 					<div class="modal-content">
@@ -40,7 +40,38 @@
 							</form>
 						</div>
 						<div class="modal-footer">
-							<input id="save_button" class="btn btn-primary" type="button" value="Save">
+							<input id="issue_save_button" class="btn btn-primary" type="button" value="Save">
+							<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+						</div>
+					</div>
+
+				</div>
+			</div>
+
+			<!-- Modal Criteria-->
+			<div class="modal fade" id="criteriaModal" role="dialog">
+				<div class="modal-dialog">
+					<!-- Modal content-->
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal">&times;</button>
+							<h4 class="modal-title">Save as a criteria</h4>
+						</div>
+						<div class="modal-body">
+							<form action="/action_page.php">
+								Issue Title:<br>
+								<input id ="criteria_title" type="text" name="criteria_title" value="Title of the Criteria">
+								<br>
+								Issue Type:<br>
+								<input id = "criteria_type" type="text" name="criteria_type" value="Type of the Criteria">
+								<br>
+								Issue Type:<br>
+								<input id = "criteria_text" type="text" name="criteria_text" value="Criteria text">
+								<br>
+							</form>
+						</div>
+						<div class="modal-footer">
+							<input id="criteria_save_button" class="btn btn-primary" type="button" value="Save">
 							<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 						</div>
 					</div>
