added revision mods

--- a/CommentBox/test.html
+++ b/CommentBox/test.html
@@ -78,7 +78,9 @@
 
 				</div>
 			</div>
-
+			<div id="note_save">
+				<input type="button" name="note_button" onclick="f()">
+			</div>
 		</div>
 
 		<!--<div id="comments" , class="comments"></div>
