--- a/CommentBox/test.html
+++ b/CommentBox/test.html
@@ -11,11 +11,13 @@
 
 <body>
 	<div class="parentDiv">
+		<div id="aggregateDiv" class="aggregate">
+		</div>
 		<div class="container">
 			<!-- Trigger the modal with a button 
 			<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open
 				Modal</button> -->
-			
+
 
 			<!-- Modal Issue-->
 			<div class="modal fade" id="issueModal" role="dialog">
@@ -29,13 +31,13 @@
 						<div class="modal-body">
 							<form action="/action_page.php">
 								Issue Title:<br>
-								<input id ="issue_title" type="text" name="issue_title" value="Title of the issue">
+								<input id="issue_title" type="text" name="issue_title" value="Title of the issue">
 								<br>
 								Issue Type:<br>
-								<input id = "issue_type" type="text" name="issue_type" value="Type of the issue">
+								<input id="issue_type" type="text" name="issue_type" value="Type of the issue">
 								<br>
 								Issue Type:<br>
-								<input id = "issue_text" type="text" name="issue_text" value="Issue text">
+								<input id="issue_text" type="text" name="issue_text" value="Issue text">
 								<br>
 							</form>
 						</div>
@@ -60,13 +62,14 @@
 						<div class="modal-body">
 							<form action="/action_page.php">
 								Issue Title:<br>
-								<input id ="criteria_title" type="text" name="criteria_title" value="Title of the Criteria">
+								<input id="criteria_title" type="text" name="criteria_title"
+									value="Title of the Criteria">
 								<br>
 								Issue Type:<br>
-								<input id = "criteria_type" type="text" name="criteria_type" value="Type of the Criteria">
+								<input id="criteria_type" type="text" name="criteria_type" value="Type of the Criteria">
 								<br>
 								Issue Type:<br>
-								<input id = "criteria_text" type="text" name="criteria_text" value="Criteria text">
+								<input id="criteria_text" type="text" name="criteria_text" value="Criteria text">
 								<br>
 							</form>
 						</div>
@@ -93,6 +96,7 @@
 
 </html>
 
+<script src="agg_view.js"></script>
 <script src="overview.js"></script>
 <script src="proposal_view.js"></script>
 <script src="revision.js"></script>
