adding overview middle part

--- a/CommentBox/test.html
+++ b/CommentBox/test.html
@@ -6,6 +6,9 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 	<script src="https://d3js.org/d3.v4.min.js" charset="utf-8"></script>
+	<script src="https://d3js.org/d3-color.v1.min.js"></script>
+	<script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
+	<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 	<link rel="stylesheet" href="test.css">
 </head>
 
@@ -81,9 +84,9 @@
 
 				</div>
 			</div>
-			<div id="note_save">
+			<!-- <div id="note_save">
 				<input type="button" name="note_button" onclick="f()">
-			</div>
+			</div> -->
 		</div>
 
 		<!--<div id="comments" , class="comments"></div>
