--- a/CommentBox/test.html
+++ b/CommentBox/test.html
@@ -14,6 +14,7 @@
 
 <body>
 	<div class="parentDiv">
+		<div id="topDiv" class="top"></div>
 		<div id="aggregateDiv" class="aggregate">
 		</div>
 		<div class="container">
