--- a/CommentBox/test.html
+++ b/CommentBox/test.html
@@ -17,6 +17,7 @@
 <body>
 	<div class="parentDiv">
 		<div id="topDiv" class="top"></div>
+		<div id="labelDiv" class="label"></div>
 		<div id="aggregateDiv" class="aggregate">
 		</div>
 		<div class="container">
