--- a/CommentBox/index.html
+++ b/CommentBox/index.html
@@ -10,6 +10,8 @@
 	<script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
 	<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 	<script src="https://unpkg.com/tooltip.js/dist/umd/tooltip.min.js"></script>
+
+	<script src="https://unpkg.com/popper.js@1/dist/umd/popper.min.js"></script>
 	<script src="https://unpkg.com/tippy.js@4"></script>
 	<link rel="stylesheet" href="test.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
@@ -18,6 +20,10 @@
 
 <body>
 	<div class="parentDiv">
+		<div>
+			<button aria-haspopup="true" aria-expanded="false">Text</button>
+		</div>
+
 		<div id="topDiv" class="top"></div>
 		<div id="labelDiv" class="label"></div>
 		<div id="aggregateDiv" class="aggregate">
