--- a/CommentBox/index.html
+++ b/CommentBox/index.html
@@ -20,9 +20,9 @@
 
 <body>
 	<div class="parentDiv">
-		<div>
-			<button aria-haspopup="true" aria-expanded="false">Text</button>
-		</div>
+		<!--<div>-->
+			<!--<button aria-haspopup="true" aria-expanded="false">Text</button>-->
+		<!--</div>-->
 
 		<div id="topDiv" class="top"></div>
 		<div id="labelDiv" class="label"></div>
