added save functions for all, internally checked, didn't save to file yet

--- a/CommentBox/index.html
+++ b/CommentBox/index.html
@@ -14,14 +14,15 @@
 	<script src="https://unpkg.com/popper.js@1/dist/umd/popper.min.js"></script>
 	<script src="https://unpkg.com/tippy.js@4"></script>
 	<link rel="stylesheet" href="test.css">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+		integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
 </head>
 
 <body>
 	<div class="parentDiv">
 		<!--<div>-->
-			<!--<button aria-haspopup="true" aria-expanded="false">Text</button>-->
+		<!--<button aria-haspopup="true" aria-expanded="false">Text</button>-->
 		<!--</div>-->
 
 		<div id="topDiv" class="top"></div>
@@ -46,13 +47,13 @@
 						<div class="modal-body">
 							<form action="/action_page.php">
 								Issue Title:<br>
-								<input id="issue_title" type="text" name="issue_title" value="Title of the issue">
+								<input id="issue_title" type="text" name="issue_title" value="">
 								<br>
 								Issue Type:<br>
-								<input id="issue_type" type="text" name="issue_type" value="Type of the issue">
+								<input id="issue_type" type="text" name="issue_type" value="">
 								<br>
 								Issue Type:<br>
-								<input id="issue_text" type="text" name="issue_text" value="Issue text">
+								<input id="issue_text" type="text" name="issue_text" value="">
 								<br>
 							</form>
 						</div>
@@ -77,14 +78,13 @@
 						<div class="modal-body">
 							<form action="/action_page.php">
 								Issue Title:<br>
-								<input id="criteria_title" type="text" name="criteria_title"
-									value="Title of the Criteria">
+								<input id="criteria_title" type="text" name="criteria_title" value="">
 								<br>
 								Issue Type:<br>
-								<input id="criteria_type" type="text" name="criteria_type" value="Type of the Criteria">
+								<input id="criteria_type" type="text" name="criteria_type" value="">
 								<br>
 								Issue Type:<br>
-								<input id="criteria_text" type="text" name="criteria_text" value="Criteria text">
+								<input id="criteria_text" type="text" name="criteria_text" value="">
 								<br>
 							</form>
 						</div>
