tippy hovers finished

--- a/CommentBox/index.html
+++ b/CommentBox/index.html
@@ -10,7 +10,6 @@
 	<script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
 	<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 	<script src="https://unpkg.com/tooltip.js/dist/umd/tooltip.min.js"></script>
-
 	<script src="https://unpkg.com/popper.js@1/dist/umd/popper.min.js"></script>
 	<script src="https://unpkg.com/tippy.js@4"></script>
 	<link rel="stylesheet" href="test.css">
@@ -20,7 +19,7 @@
 </head>
 
 <body>
-	<div class="parentDiv">
+	<div id="parDiv" class="parentDiv">
 		<!--<div>-->
 		<!--<button aria-haspopup="true" aria-expanded="false">Text</button>-->
 		<!--</div>-->
@@ -104,9 +103,8 @@
 		<!--<div id="comments" , class="comments"></div>
 		<div style="background-color:blueviolet; height:30vh; width: 100%"></div>
 		<button onclick="myFunction()">Try it</button>-->
-		<div id="parentBox" , class="box"></div>
+		<div id="parentBox" class="box"></div>
 	</div>
-
 </body>
 
 </html>
