--- a/CommentBox/index.html
+++ b/CommentBox/index.html
@@ -23,7 +23,9 @@
 		<!--<div>-->
 		<!--<button aria-haspopup="true" aria-expanded="false">Text</button>-->
 		<!--</div>-->
+		<div class="instructionDiv" id="instruction">
 
+		</div>
 		<div id="topDiv" class="top"></div>
 		<div id="labelDiv" class="label"></div>
 		<div id="aggregateDiv" class="aggregate">
