--- a/CommentBox/index.html
+++ b/CommentBox/index.html
@@ -23,7 +23,10 @@
 		<!--<div>-->
 		<!--<button aria-haspopup="true" aria-expanded="false">Text</button>-->
 		<!--</div>-->
-		<div class="instrDiv" id="instr"></div>
+		<div class="headerDiv" id="header">
+			<div class="instrDiv" id="instr"></div>
+			<div class="homeDiv" id="home"></div>
+		</div>
 		<div id="topDiv" class="top"></div>
 		<div id="labelDiv" class="label"></div>
 		<div id="aggregateDiv" class="aggregate">
