hovers and clicks added

--- a/CommentBox/index.html
+++ b/CommentBox/index.html
@@ -4,7 +4,7 @@
 <head>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<script src="https://d3js.org/d3.v4.min.js" charset="utf-8"></script>
 	<script src="https://d3js.org/d3-color.v1.min.js"></script>
 	<script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
@@ -25,7 +25,7 @@
 		<!--</div>-->
 		<div class="headerDiv" id="header">
 			<div class="instrDiv" id="instr"></div>
-			<div class="homeDiv" id="home"></div>
+			<div class="refreshDiv" id="refresh"></div>
 		</div>
 		<div id="topDiv" class="top"></div>
 		<div id="labelDiv" class="label"></div>
@@ -35,7 +35,6 @@
 			<!-- Trigger the modal with a button 
 			<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open
 				Modal</button> -->
-
 
 			<!-- Modal Issue-->
 			<div class="modal fade" id="issueModal" role="dialog">
