--- a/CommentBox/index.html
+++ b/CommentBox/index.html
@@ -31,8 +31,8 @@
 					<span class="icon-bar"></span>
 				</button>
 				<a class="navbar-brand" href="#">
-					<img alt="Brand"
-						src="https://i.imgur.com/fJ69Rb7.png", width=30px, height=30px, style="transform:rotate(130deg);")>
+					<img alt="Brand" src="https://i.imgur.com/fJ69Rb7.png" , width=30px, height=30px,
+						style="transform:rotate(130deg);" )>
 				</a>
 			</div>
 
@@ -42,11 +42,15 @@
 					<li><a href="#">User Guide</a></li>
 					<li><a href="#">Refresh</a></li>
 				</ul>
-				<form class="navbar-form navbar-left">
-					<div class="form-group">
-						<input type="text" class="form-control" placeholder="Search">
+				<form class="navbar-form navbar-left" action="/action_page.php">
+					<div class="input-group">
+						<input type="text" class="form-control" placeholder="Search" name="search">
+						<div class="input-group-btn">
+							<button class="btn btn-default" type="submit">
+								<i class="glyphicon glyphicon-search"></i>
+							</button>
+						</div>
 					</div>
-					<button type="submit" class="btn btn-default">Submit</button>
 				</form>
 			</div><!-- /.navbar-collapse -->
 		</div><!-- /.container-fluid -->
