--- a/CommentBox/index.html
+++ b/CommentBox/index.html
@@ -12,6 +12,8 @@
 	<script src="https://unpkg.com/tooltip.js/dist/umd/tooltip.min.js"></script>
 	<script src="https://unpkg.com/popper.js@1/dist/umd/popper.min.js"></script>
 	<script src="https://unpkg.com/tippy.js@4"></script>
+
+
 	<link rel="stylesheet" href="test.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
 		integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
@@ -44,7 +46,7 @@
 				</ul>
 				<form class="navbar-form navbar-left" action="/action_page.php">
 					<div class="input-group">
-						<input type="text" class="form-control" placeholder="Search" name="search">
+						<input type="text" class="form-control" id="mysearch" placeholder="Search" name="search">
 						<div class="input-group-btn">
 							<button class="btn btn-default" type="submit">
 								<i class="glyphicon glyphicon-search"></i>
@@ -148,6 +150,11 @@
 
 </html>
 
+
 <script src="overview.js"></script>
 <script src="proposal_view.js"></script>
 <script src="agg_view.js"></script>
+
+<script src="js/highlight.js"></script>
+
+<script src="js/search.js"></script>
