--- a/CommentBox/index.html
+++ b/CommentBox/index.html
@@ -48,7 +48,7 @@
 					<div class="input-group">
 						<input type="text" class="form-control" id="mysearch" placeholder="Search" name="search">
 						<div class="input-group-btn">
-							<button class="btn btn-default" type="submit">
+							<button class="btn btn-default" id="search_button" type="submit">
 								<i class="glyphicon glyphicon-search"></i>
 							</button>
 						</div>
