--- a/CommentBox/index.html
+++ b/CommentBox/index.html
@@ -44,7 +44,7 @@
 					<li><a href="#">User Guide</a></li>
 					<li><a href="#">Refresh</a></li>
 				</ul>
-				<form class="navbar-form navbar-left" action="/action_page.php">
+				<form class="navbar-form navbar-left" >
 					<div class="input-group">
 						<input type="text" class="form-control" id="mysearch" placeholder="Search" name="search">
 						<div class="input-group-btn">
