--- a/CommentBox/index.html
+++ b/CommentBox/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-default">
+	<nav class="navbar navbar-dark" style= "background-color: #2C485B">
 		<div class="container-fluid">
 			<!-- Brand and toggle get grouped for better mobile display -->
 			<div class="navbar-header">
@@ -32,26 +32,17 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">
-					<img alt="Brand" src="https://i.imgur.com/fJ69Rb7.png" , width=30px, height=30px,
-						style="transform:rotate(135deg);" )>
-				</a>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
-					<li><a href="#">User Guide</a></li>
-					<li><a href="#">Refresh</a></li>
+					<p class="navbar-text" style="font-size:1.5em; color:white"">CommunityPulse</p>
+					<li style="padding:5px;"><a href="#" style="color:white">User Guide</a></li>
 				</ul>
-				<form class="navbar-form navbar-left" >
+				<form class="navbar-form navbar-right" >
 					<div class="input-group">
 						<input type="text" class="form-control" id="mysearch" placeholder="Search" name="search">
-						<div class="input-group-btn">
-							<button class="btn btn-default" id="search_button" type="submit">
-								<i class="glyphicon glyphicon-search"></i>
-							</button>
-						</div>
 					</div>
 				</form>
 			</div><!-- /.navbar-collapse -->
