--- a/CommentBox/index.html
+++ b/CommentBox/index.html
@@ -13,7 +13,7 @@
 	<script src="https://unpkg.com/popper.js@1/dist/umd/popper.min.js"></script>
 	<script src="https://unpkg.com/tippy.js@4"></script>
 	<script src="//cdn.jsdelivr.net/npm/jquery.scrollto@2.1.2/jquery.scrollTo.min.js"></script>
-
+	<script src="interaction_log.js"></script>
 
 
 	<link rel="stylesheet" href="test.css">
