--- a/CommentBox/index.html
+++ b/CommentBox/index.html
@@ -68,7 +68,7 @@
 					</button>
 				</div>
 				<div class="modal-body">
-					<p></p>
+					<img class="img-responsive" style="margin:0 auto;" src="https://i.imgur.com/TqMLU61.png" alt="">
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
@@ -82,7 +82,7 @@
 		<!--<button aria-haspopup="true" aria-expanded="false">Text</button>-->
 		<!--</div>-->
 		<div id="labelDiv" class="label"></div>
-		<div id="topDiv" class="top"></div>
+		<!-- <div id="topDiv" class="top"></div> -->
 		<div id="aggregateDiv" class="aggregate">
 		</div>
 		<div class="container">
