--- a/CommentBox/index.html
+++ b/CommentBox/index.html
@@ -65,7 +65,7 @@
 					</button>
 				</div>
 				<div class="modal-body">
-					<img class="img-responsive" style="margin:0 auto;" src="https://i.imgur.com/D7xNgK2.png" alt="">
+					<img class="img-responsive" style="margin:0 auto;" src="https://i.imgur.com/FieANdN.png" alt="">
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
