--- a/CommentBox/index.html
+++ b/CommentBox/index.html
@@ -104,7 +104,7 @@
 								Issue Type:<br>
 								<input id="issue_type" type="text" name="issue_type" value="">
 								<br>
-								Issue Type:<br>
+								Issue Text:<br>
 								<input id="issue_text" type="text" name="issue_text" value="">
 								<br>
 							</form>
@@ -129,13 +129,13 @@
 						</div>
 						<div class="modal-body">
 							<form action="/action_page.php">
-								Issue Title:<br>
+								Criteria Title:<br>
 								<input id="criteria_title" type="text" name="criteria_title" value="">
 								<br>
-								Issue Type:<br>
+								Criteria Type:<br>
 								<input id="criteria_type" type="text" name="criteria_type" value="">
 								<br>
-								Issue Type:<br>
+								Criteria Type:<br>
 								<input id="criteria_text" type="text" name="criteria_text" value="">
 								<br>
 							</form>
