--- a/CommentBox/index.html
+++ b/CommentBox/index.html
@@ -14,8 +14,10 @@
 	<script src="https://unpkg.com/tippy.js@4"></script>
 	<script src="//cdn.jsdelivr.net/npm/jquery.scrollto@2.1.2/jquery.scrollTo.min.js"></script>
 	<script src="interaction_log.js"></script>
+	<script src="http://mistic100.github.io/jQCloud/dist/jqcloud2/dist/jqcloud.js"></script>
 
 	<link rel="stylesheet" href="test.css">
+	<link rel="stylesheet" href="http://mistic100.github.io/jQCloud/dist/jqcloud2/dist/jqcloud.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
 		integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
@@ -75,8 +77,8 @@
 		</div>
 	</div>
 
-	<!-- Modal Instruction-->
-	<div class="modal fade" id="notesAllModal" tabindex="-1" role="dialog" aria-labelledby="notesAllModal" aria-hidden="true">
+	<!-- Modal Notes-->
+	<div class="modal fade" id="notesAllModal" tabindex="-2" role="dialog" aria-labelledby="notesAllModal" aria-hidden="true">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
